2011-12-02  Carsten Haitzler (The Rasterman)

        * 1.1.0 release

2012-04-26  Carsten Haitzler (The Rasterman)

        * 1.2.0 release

2012-05-02  Cedric Bail

        * Do not allocate more than once Evas_Map.

2012-08-30  Carsten Haitzler (The Rasterman)

        * 1.7.0 release

2012-10-24  Eduardo Lima (Etrunko)

        * Remove support fox software_16_x11

2012-11-01  Eduardo Lima (Etrunko)

        * Added basic support for wayland engines